added quotations almost all connections done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret=mySecretKey
 jwt.expiration=86400000
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+springdoc.swagger-ui.path=/swagger-ui.html
+
 
 spring.security.user.name=pavan
 spring.security.user.password=password
