all the small problems are fixed added react in the project now we can run the frontend and backend from the single port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,11 @@ springdoc.swagger-ui.path=/swagger-ui.html
 spring.security.user.name=pavan
 spring.security.user.password=password
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pavandhote009@gmail.com
+spring.mail.password=kuct cwyn tqda hmwc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
